# ewrender

./: .gitignore  CMakeLists.txt  README.md
include/ew/: shader.hpp
src/: main.cpp  shader.cpp
